delete, detail apis upload
